contacts: Allow and ignore empty e-mail addresses

Empty e-mail addresses (<gd:email address=''/>) are apparently allowed
by convention in the XML. Previously, we treated the empty address
attribute as an error. Instead, we should ignore the entire element,
treating it as non-existent.

https://bugzilla.gnome.org/show_bug.cgi?id=734863